fix attribution text ovelap, prevent horizonal overflow
Former-commit-id: ba59f0c626086a0588186a00059eac085e8756d8

--- a/themes/bookvega/assets/_shortcodes.scss
+++ b/themes/bookvega/assets/_shortcodes.scss
@@ -118,7 +118,7 @@
   }
 
   .attribution {
-    line-height: 0;
+    line-height: 1;
     font-size: $font-size-12;
     padding-bottom: 20px;
   }
